Updated logo name

--- a/src/static/en-US/terms.html
+++ b/src/static/en-US/terms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rebel Outfitters</title>
+    <title>Sample Logo</title>
 
     <!-- favicon -->
     <link rel="icon" href="../../img/favicon.png">
@@ -19,8 +19,8 @@
 
 <body>
     <div class="termContainer">
-        <h1 class="termHead">Rebel Outfitters Terms and Conditions</h1>
-        <p>By purchasing equipment from Rebel Outfitters, I agree to uphold the Declaration of the Rebellion as stated below.</p>
+        <h1 class="termHead">Sample Logo Terms and Conditions</h1>
+        <p>By purchasing equipment from Sample Logo, I agree to uphold the Declaration of the Rebellion as stated below.</p>
         <p>We, the Rebel Alliance, do therefore in the name—and by the authority—of the free beings of the Galaxy, solemnly publish and declare our intentions:</p>
         <p>To fight and oppose the Galactic Empire, by any and all means at our disposal;</p>
         <p>To refuse any Imperial law contrary to the rights of free beings;</p>
