--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sample Logo</title>
+    <title>Just Cocktail</title>
 
     <!-- favicon -->
     <link rel="icon" href="img/favicon.png">
